// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayField component is correctly rendering with Add button 1`] = `
<div
  className="d-flex flex-column"
>
  <div
    className="text-center border"
  >
    <div
      className="d-flex flex-row border-bottom font-weight-bold py-1"
    />
  </div>
  <div
    className="text-center border mb-1 flex-grow-1"
    style={
      Object {
        "maxHeight": "calc(100vh - 400px)",
        "overflowY": "scroll",
      }
    }
  >
    <div
      className="table-row even-row "
    >
      <div
        className="d-flex flex-row border-bottom table-inner-row"
      >
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        >
          <button
            className="btn btn-xs btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
    <div
      className="table-row  "
    >
      <div
        className="d-flex flex-row border-bottom table-inner-row"
      >
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        >
          <button
            className="btn btn-xs btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="text-center"
  >
    <button
      className="btn btn-outline-success btn-xs"
      onClick={[Function]}
      type="button"
    >
      Add item
    </button>
  </div>
</div>
`;

exports[`ArrayField component is correctly rendering with no Add button 1`] = `
<div
  className="d-flex flex-column"
>
  <div
    className="text-center border"
  >
    <div
      className="d-flex flex-row border-bottom font-weight-bold py-1"
    />
  </div>
  <div
    className="text-center border mb-1 flex-grow-1"
    style={
      Object {
        "maxHeight": "calc(100vh - 400px)",
        "overflowY": "scroll",
      }
    }
  >
    <div
      className="table-row even-row "
    >
      <div
        className="d-flex flex-row border-bottom table-inner-row"
      >
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        >
          <button
            className="btn btn-xs btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
    <div
      className="table-row  "
    >
      <div
        className="d-flex flex-row border-bottom table-inner-row"
      >
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        />
        <div
          className="align-self-center mx-1"
          style={
            Object {
              "flex": "12 1 0",
              "minWidth": 0,
            }
          }
        >
          <button
            className="btn btn-xs btn btn-outline-danger"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
